--- a/app/src/main/res/layout/fragment_trailers.xml
+++ b/app/src/main/res/layout/fragment_trailers.xml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.udacity.project.popularmovies.ui.activity.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_movie_recycler"
+        android:id="@+id/rv_trailers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv_empty_list_message"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:visibility="gone" />
-
-</merge>
+</LinearLayout>
