--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,4 +10,9 @@
         android:id="@+id/sort_by_rate"
         android:title="@string/highest_rated"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/sort_by_favorite"
+        android:title="@string/favorite"
+        app:showAsAction="never" />
 </menu>
